2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: handled other case
	  of unresolveable types.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: make it clearer
	  that the type can't be resolved.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Handled
	  unresolved return types

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	  Corrected base call.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	  Corrected type name output.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	  Removed some code duplication.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Refactoring/CodeGenerator.cs:
	* MonoDevelop.CSharp.Refactoring/CSharpRefactorer.cs:
	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
	  Code generator get's now used by code completion auto
	  generation & insert code feature.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	  Worked on code generation.

2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* CSharpBinding.addin.xml:
	* MonoDevelop.CSharp.Refactoring/CodeGenerator.cs:
	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs:
	  Worked on c# code generation.

2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: Fixed
	  'Bug 610241 - #elif Coloring Messed'.

2010-05-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/MoveToUsagesHandler.cs: