@@ -1,3 +1,10 @@
+2010-06-04  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs:
+	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
+	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
+	  Fixed LINQ resolve error.
+
 2010-06-03  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: handled other case
